[gd_scene load_steps=10 format=3 uid="uid://c4lowjnv5s7aa"]

[ext_resource type="Script" path="res://Paintings/eye_parent.gd" id="1_dvfek"]
[ext_resource type="Texture2D" uid="uid://dip5c4vjqo0uw" path="res://Art Assets/Paintings/Eyes-Sheet.png" id="1_ngxyj"]
[ext_resource type="Script" path="res://Paintings/eye.gd" id="2_nhh4i"]
[ext_resource type="Texture2D" uid="uid://cbvtxe1o7pkaa" path="res://Art Assets/Paintings/EyePupil.png" id="3_pybti"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6tio4"]
radius = 51.0

[sub_resource type="Animation" id="Animation_y0udj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SightArea/EyeWhite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SightArea/EyeWhite/Pupil:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_r034t"]
resource_name = "blink"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SightArea/EyeWhite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SightArea/EyeWhite/Pupil:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_qt1ju"]
resource_name = "random_blink"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SightArea/EyeWhite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SightArea/EyeWhite/Pupil:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4lkm6"]
_data = {
"RESET": SubResource("Animation_y0udj"),
"blink": SubResource("Animation_r034t"),
"random_blink": SubResource("Animation_qt1ju")
}

[node name="Eyes" type="Node2D" groups=["Eyes"]]
script = ExtResource("1_dvfek")

[node name="SightArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="SightArea"]
shape = SubResource("CircleShape2D_6tio4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="SightArea"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_4lkm6")
}

[node name="EyeWhite" type="Sprite2D" parent="SightArea"]
texture = ExtResource("1_ngxyj")
hframes = 2
script = ExtResource("2_nhh4i")

[node name="Pupil" type="Sprite2D" parent="SightArea/EyeWhite"]
texture = ExtResource("3_pybti")

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="Timer" to="." method="random_blink"]
